kubernetes/pods/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    app: prometheus
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - name: prometheus
    port: 9090
