kubernetes/pods/prometheus/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # lego ssl cert
    kubernetes.io/tls-acme: "true"
    # Basic auth
    # Doc: https://kubernetes.github.io/ingress-nginx/examples/auth/basic/README/
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - k8s"

  name: prometheus
spec:
  tls:
  - secretName: tls-secret-prometheus
    hosts:
    - prometheus.infra.prod-1.devops.bot
  rules:
  - host: prometheus.infra.prod-1.devops.bot
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
      - path: /alertmanager
        backend:
          serviceName: alertmanager
          servicePort: 9093
